deluge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge
  namespace: plex
  labels:
    app: deluge
spec:
  type: ClusterIP
  ports:
    - name: web-interface
      port: 8112
      targetPort: 8112
      protocol: TCP
#    - name: daemon-port
#      port: 58846
#      targetPort: 58846
#      protocol: TCP
  selector:
    app: deluge
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: deluge-udp
#  namespace: plex
#  labels:
#    app: deluge
#spec:
#  type: LoadBalancer
#  ports:
#    - name: conn-udp
#      port: 58946
#      targetPort: 58946
#      protocol: UDP
#  selector:
#    app: deluge
#
