deluge/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: deluge
  namespace: plex
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: torrent.arturonet.com
      http:
        paths:
          - path: /
            backend:
              serviceName: deluge
              servicePort: 8112
